--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
 }
 
 body {
+  background:linear-gradient(
+    to left,
+    white,pink,rgb(248, 134, 248)
+  );
   font-family: "Poppins", sans-serif;
 }
 
@@ -92,7 +96,7 @@ a:hover {
 .hamburger-icon span {
   width: 100%;
   height: 2px;
-  background-color: rgb(138, 135, 138);
+  background-color: rgb(250, 154, 250);
   transition: all 0.3 ease-in-out;
 }
 
@@ -364,7 +368,7 @@ article .icon {
 
 .color-container {
   border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+  background: rgb(235, 149, 213);
 }
 
 .project-img {
